# opengl-soft-render

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
example/blend_test/: opengl_render_blend_test.cpp  opengl_render_blend_test.h
example/cube_map/: opengl_render_cube_map.cpp  opengl_render_cube_map.h
example/cullface/: opengl_render_cullface.cpp  opengl_render_cullface.h
example/depth_test/: opengl_render_depth_test.cpp  opengl_render_depth_test.h
example/example_common/: common.h  egl_manager.cpp  egl_manager.h  opengl_render.cpp  opengl_render.h  shader.cpp  shader.h  utils.cpp  utils.h  x11_window.cpp  x11_window.h
example/fbo/: opengl_render_fbo.cpp  opengl_render_fbo.h
example/line/: opengl_render_line.cpp  opengl_render_line.h  opengl_render_line_loop.cpp  opengl_render_line_loop.h  opengl_render_line_strip.cpp  opengl_render_line_strip.h  opengl_render_line_width.cpp  opengl_render_line_width.h
example/point/: opengl_render_point.cpp  opengl_render_point.h  opengl_render_point_size.cpp  opengl_render_point_size.h
example/shader_compiler/: compiler_header.h  pixel_compiler_color.cpp  pixel_compiler_color.h  pixel_compiler_cube_map.cpp  pixel_compiler_cube_map.h  pixel_compiler_texture.cpp  pixel_compiler_texture.h  pixel_compiler_texture_overlay.cpp  pixel_compiler_texture_overlay.h  pixel_compiler_triangle.h  (+17 more)
resource/: container.pkm  testimage_RGBA8.pkm
shader_source/: color_fragment_shader.fs  color_vertex_shader.vs  fragment_shader.fs  fragment_shader_cube_map.fs  fragment_shader_texture.fs  fragment_shader_texture_overlay.fs  fragment_shader_texture_yuv.fs  vertex_shader.vs  vertex_shader_cube_map.vs  vertex_shader_point_size.vs  vertex_shader_texture.vs  vertex_shader_texture_advanced.vs
(+124 files in other folders)
